css and js static files added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title><%= title %> | Page</title>
+        <script src="js/temp.js"></script>
     </head>
     <body>
         <h3>This is home page</h3>
