--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,27 @@
 <html>
     <head>
         <title><%= title %> | Page</title>
-        <script src="js/temp.js"></script>
+        <script src="js/bootstrap.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg bg-dark bg-gradient">
+            <div class="container-fluid">
+              <a class="navbar-brand text-white" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                  <a class="nav-link text-white" href="#">Features</a>
+                  <a class="nav-link text-white" href="#">Pricing</a>
+                  <a class="nav-link text-white" >Disabled</a>
+                </div>
+              </div>
+            </div>
+          </nav>
         <h3>This is home page</h3>
+        <button class="btn btn-primary">Hellow</button>
     </body>
 </html>
