--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,6 +24,24 @@
             </div>
           </nav>
         <h3>This is home page</h3>
-        <button class="btn btn-primary">Hellow</button>
+        <div class="form mx-2">
+            <div class="mb-3 col-2">
+                <label class="form-label" for="language">Language</label>
+                <select class="form-select" id="language">
+                    <option selected>Select</option>
+                    <option value="c">C</option>
+                    <option value="cpp">C++</option>
+                    <option value="java">Java</option>
+                    <option value="js">Javascript</option>
+                    <option value="python">Python</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="code" class="form-label">Your Code</label>
+                <textarea class="form-control" id="code" rows="10"></textarea>
+            </div>
+        </div>
+        <button class="btn btn-primary" id="compile_button">Compile</button>
     </body>
+    <script src="js/compile.js"></script>
 </html>
