initial python compiler added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,8 +40,15 @@
                 <label for="code" class="form-label">Your Code</label>
                 <textarea class="form-control" id="code" rows="10"></textarea>
             </div>
+            <button class="btn btn-primary" id="compile_button">Compile</button>
+            <hr />
+            <div class="mb-3">
+              <label for="code" class="form-label">Result</label>
+              <textarea class="form-control" id="result" rows="5" disabled></textarea>
+          </div>
         </div>
-        <button class="btn btn-primary" id="compile_button">Compile</button>
+        
+       
     </body>
     <script src="js/compile.js"></script>
 </html>
