--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
                     <option value="c">C</option>
                     <option value="cpp">C++</option>
                     <option value="java">Java</option>
-                    <option value="js">Javascript</option>
+                    <option value="js">Javascript (Node)</option>
                     <option value="python">Python</option>
                 </select>
             </div>
