--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
         <div class="form mx-2">
             <div class="mb-3 col-2">
                 <label class="form-label" for="language">Language</label>
-                <select class="form-select" id="language">
+                <select class="form-select" id="language" onchange="changeLang()">
                     <option selected>Select</option>
                     <option value="c">C</option>
                     <option value="cpp">C++</option>
