--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <style type="text/css" media="screen">
           #editor {
-            width: 800px;
-            height: 600px;
+            width: 98%;
+            height: 40rem;
           }
       </style>
     </head>
@@ -31,19 +31,25 @@
               </div>
             </div>
           </nav>
-        <h3>This is home page</h3>
-        
         <div class="form mx-2">
-            <div class="mb-3 col-2">
-                <label class="form-label" for="language">Language</label>
-                <select class="form-select" id="language" onchange="changeLang()">
-                    <option selected>Select Language</option>
-                    <option value="c">C</option>
-                    <option value="cpp">C++</option>
-                    <option value="java">Java</option>
-                    <option value="js">Javascript (Node)</option>
-                    <option value="python">Python</option>
+            <div class="d-flex mb-3 col-12">
+              <div class="col-4 mx-1">
+                  <label class="form-label" for="language">Language</label>
+                  <select class="form-select" id="language" onchange="changeLang()">
+                      <option selected>Select Language</option>
+                      <option value="c">C</option>
+                      <option value="cpp">C++</option>
+                      <option value="java">Java</option>
+                      <option value="js">Javascript (Node)</option>
+                      <option value="python">Python</option>
+                  </select>
+              </div>
+              <div class="col-4 mx-1">
+                <label class="form-label" for="theme">Theme</label>
+                <select class="form-select" id="theme" onchange="changeTheme()">
+                  <option selected>Select a Theme</option>
                 </select>
+              </div>
             </div>
             <div id="editor" class="my-2 mx-2">//Code goes here.......
             </div>
