php compiler added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,6 +41,7 @@
                       <option value="cpp">C++</option>
                       <option value="java">Java</option>
                       <option value="js">Javascript (Node)</option>
+                      <option value="php">Php</option>
                       <option value="python">Python</option>
                   </select>
               </div>
@@ -60,14 +61,7 @@
               <textarea class="form-control" id="result" rows="10" disabled></textarea>
           </div>
         </div>
-        <hr />
-        
-        
-        
-       
+        <hr />  
     </body>
     <script src="js/compile.js"></script>
-    <script>
-     
-    </script>
 </html>
