compile time added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,9 @@
             </div>
             <hr />
             <div class="mb-3 mx-2">
-              <label for="code" class="form-label">Result</label>
+              <label for="code" class="form-label"><strong>Result</strong> </label>
+              <br />
+              <i><span id="compile_time"></span></i>
               <textarea class="form-control" id="result" rows="10" disabled></textarea>
             </div>
         </div>
